--- a/createqr.html
+++ b/createqr.html
@@ -23,7 +23,7 @@
   <p>
   <form id="mail_form">
     <label for="e_mail_address">Betreiber-Mail*:</label>
-    <input type="email" id="e_mail_address">
+    <input type="email" size="30" id="e_mail_address">
     <input onclick="createQrCode()"
       style="margin: 1em;padding: 1em;background-color: rgb(248, 241, 175);border: gray 1px solid;font-weight: bold;"
       type="submit" value="QR-Code erstellen">
