Minor bugfix in localization code.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
 <body style="font-family: 'Roboto', sans-serif;">
     <h1 id="i18n-title">Report an Overflowing Waste Bin</h1>
-    <p id="i18n-bin-is-full">Hallo, der M&uuml;lleimer ist &uuml;berf&uuml;llt? Sie m&ouml;chten das an den Betreiber melden?</p>
-    <p id="i18n-right-place">Dann sind Sie hier genau richtig!</p>
-    <p id="i18n-opens-mail">Der folgende Knopf &ouml;ffnet eine vorgefertigte E-Mail in Ihrer E-Mail-App. Sie m&uuml;ssen dann nur noch die
-        E-Mail absenden, um die &Uuml;berf&uuml;llung zu melden.</p>
+    <p id="i18n-bin-is-full">Hello, this public waste bin is jam-packed? You want to send a report to the operator?</p>
+    <p id="i18n-right-place">Then youare exactly right here!</p>
+    <p id="i18n-opens-mail">The following button opens a prefabricated e-mail in your e-mail app. You only need to send the e-mail,
+        to make a report.</p>
     <p>
-        <a id="mailElement">MELDUNG PER MAIL</a>
+        <a id="mailElement">REPORT VIA E-MAIL</a>
     </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/openlocationcode/1.0.3/openlocationcode.min.js"></script>
     <script src="i18n.js"></script>
