Added localized string for create button.

--- a/createqr.html
+++ b/createqr.html
@@ -24,9 +24,9 @@
   <form id="mail_form">
     <label id="i18n-operator-email" for="e_mail_address">Operator e-mail*:</label>
     <input type="email" size="30" id="e_mail_address">
-    <input onclick="createQrCode()"
+    <input id="i18n-create-button" onclick="createQrCode()"
       style="margin: 1em;padding: 1em;background-color: rgb(248, 241, 175);border: gray 1px solid;font-weight: bold;"
-      type="submit" value="QR-Code erstellen">
+      type="submit" value="Create QR code">
   </form>
   </p>
   <p></p>
